--- a/about.html
+++ b/about.html
@@ -119,7 +119,7 @@ ul.task-list li input[type="checkbox"] {
 <div class="quarto-title-meta">
   </div>
 </header><main class="content" id="quarto-document-content">
-<p>Cole Eastwood is GOATED</p>
+<p>A junior sports media major at the University of Nebraska-Lincoln.</p>
 
 
 </main> 
