--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ window.Quarto = {
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="bmNhYSUyQ2Jhc2tldGJhbGwlMkNuZWJyYXNrYSUyQ2JyaWNld2lsbGlhbXM=" data-listing-date-sort="1743483600000" data-listing-file-modified-sort="1743711986465" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="1">
+<div class="quarto-post image-right" data-index="0" data-categories="bmNhYSUyQ2Jhc2tldGJhbGwlMkNuZWJyYXNrYSUyQ2JyaWNld2lsbGlhbXM=" data-listing-date-sort="1743656400000" data-listing-file-modified-sort="1743712270218" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="9">
 <div class="thumbnail">
 <p><a href="./posts/brice-williams-season-comparison/index.html" class="no-external"></a></p><a href="./posts/brice-williams-season-comparison/index.html" class="no-external">
 <p><img loading="lazy" src="./posts/brice-williams-season-comparison/image.png" class="thumbnail-image"></p>
@@ -228,13 +228,13 @@ bricewilliams
 </div>
 </div>
 <div class="listing-description">
-<a href="./posts/brice-williams-season-comparison/index.html" class="no-external">Brice Williams is GOATed. Really goot at baskemtball.</a>
+<a href="./posts/brice-williams-season-comparison/index.html" class="no-external">Brice Williams’ 2024-25 campaign stacks up with the best.</a>
 </div>
 </div>
 <div class="metadata">
 <a href="./posts/brice-williams-season-comparison/index.html" class="no-external">
 <div class="listing-date">
-Apr 1, 2025
+Apr 3, 2025
 </div>
 <div class="listing-author">
 Cole Eastwood
