--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>sportsBlog – Cole Eastwood’s Sports Blog</title>
+<title>Cole Eastwood’s Sports Blog</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -168,7 +168,7 @@ window.Quarto = {
 <header id="title-block-header" class="quarto-title-block default page-columns page-full">
   <div class="quarto-title-banner page-columns page-full">
     <div class="quarto-title column-page-left">
-      <h1 class="title">sportsBlog</h1>
+      <h1 class="title">Cole Eastwood’s Sports Blog</h1>
                       </div>
   </div>
     
@@ -200,7 +200,7 @@ window.Quarto = {
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="bmNhYSUyQ2Jhc2tldGJhbGwlMkNuZWJyYXNrYSUyQ2JyaWNld2lsbGlhbXM=" data-listing-date-sort="1743656400000" data-listing-file-modified-sort="1743712270218" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="9">
+<div class="quarto-post image-right" data-index="0" data-categories="bmNhYSUyQ2Jhc2tldGJhbGwlMkNuZWJyYXNrYSUyQ2JyaWNld2lsbGlhbXM=" data-listing-date-sort="1743656400000" data-listing-file-modified-sort="1743720784485" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="10">
 <div class="thumbnail">
 <p><a href="./posts/brice-williams-season-comparison/index.html" class="no-external"></a></p><a href="./posts/brice-williams-season-comparison/index.html" class="no-external">
 <p><img loading="lazy" src="./posts/brice-williams-season-comparison/image.png" class="thumbnail-image"></p>
