--- a/index.html
+++ b/index.html
@@ -200,10 +200,10 @@ window.Quarto = {
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="bmNhYSUyQ2Jhc2tldGJhbGwlMkNuZWJyYXNrYSUyQ2JyaWNld2lsbGlhbXM=" data-listing-date-sort="1743656400000" data-listing-file-modified-sort="1743722751091" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="2" data-listing-word-count-sort="282">
+<div class="quarto-post image-right" data-index="0" data-categories="bmNhYSUyQ2Jhc2tldGJhbGwlMkNuZWJyYXNrYSUyQ2JyaWNld2lsbGlhbXM=" data-listing-date-sort="1743656400000" data-listing-file-modified-sort="1744303092838" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="2" data-listing-word-count-sort="300">
 <div class="thumbnail">
 <p><a href="./posts/brice-williams-season-comparison/index.html" class="no-external"></a></p><a href="./posts/brice-williams-season-comparison/index.html" class="no-external">
-<p><img loading="lazy" src="./posts/brice-williams-season-comparison/image.png" class="thumbnail-image"></p>
+<p><img loading="lazy" src="./posts/brice-williams-season-comparison/_DSC6884-Enhanced-NR_1.jpg" class="thumbnail-image"></p>
 </a><p><a href="./posts/brice-williams-season-comparison/index.html" class="no-external"></a></p>
 </div>
 <div class="body">
@@ -228,7 +228,7 @@ bricewilliams
 </div>
 </div>
 <div class="listing-description">
-<a href="./posts/brice-williams-season-comparison/index.html" class="no-external">In spite of a disappointing slide to end the season, Nebraska’s Brice Williams was absolutely phenomenal for the Cornhuskers. Williams finished the season averaging 20.5…</a>
+<a href="./posts/brice-williams-season-comparison/index.html" class="no-external">Despite coming up short of a second consecutive NCAA Tournament bid, Nebraska’s Brice Williams was absolutely phenomenal for the Cornhuskers, leading them to claim the…</a>
 </div>
 </div>
 <div class="metadata">
