--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ window.Quarto = {
 <!-- margin-sidebar -->
     <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
         
-    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(1)</span></div><div class="category" data-category="YmFza2V0YmFsbA==">basketball <span class="quarto-category-count">(1)</span></div><div class="category" data-category="YnJpY2V3aWxsaWFtcw==">bricewilliams <span class="quarto-category-count">(1)</span></div><div class="category" data-category="bmNhYQ==">ncaa <span class="quarto-category-count">(1)</span></div><div class="category" data-category="bmVicmFza2E=">nebraska <span class="quarto-category-count">(1)</span></div></div></div>
+    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(1)</span></div><div class="category" data-category="YmFza2V0YmFsbA==">basketball <span class="quarto-category-count">(1)</span></div><div class="category" data-category="YnJpY2UlMjB3aWxsaWFtcw==">brice williams <span class="quarto-category-count">(1)</span></div><div class="category" data-category="bmNhYQ==">ncaa <span class="quarto-category-count">(1)</span></div><div class="category" data-category="bmVicmFza2E=">nebraska <span class="quarto-category-count">(1)</span></div></div></div>
 <!-- main -->
 <main class="content quarto-banner-title-block column-page-left" id="quarto-document-content">
 
@@ -200,15 +200,15 @@ window.Quarto = {
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="bmNhYSUyQ2Jhc2tldGJhbGwlMkNuZWJyYXNrYSUyQ2JyaWNld2lsbGlhbXM=" data-listing-date-sort="1743656400000" data-listing-file-modified-sort="1744303092838" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="2" data-listing-word-count-sort="300">
+<div class="quarto-post image-right" data-index="0" data-categories="bmNhYSUyQ2Jhc2tldGJhbGwlMkNuZWJyYXNrYSUyQ2JyaWNlJTIwd2lsbGlhbXM=" data-listing-date-sort="1744606800000" data-listing-file-modified-sort="1744326792757" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="3" data-listing-word-count-sort="597">
 <div class="thumbnail">
 <p><a href="./posts/brice-williams-season-comparison/index.html" class="no-external"></a></p><a href="./posts/brice-williams-season-comparison/index.html" class="no-external">
-<p><img loading="lazy" src="./posts/brice-williams-season-comparison/_DSC6884-Enhanced-NR_1.jpg" class="thumbnail-image"></p>
+<p><img loading="lazy" src="./posts/brice-williams-season-comparison/BricePicture.jpg" class="thumbnail-image"></p>
 </a><p><a href="./posts/brice-williams-season-comparison/index.html" class="no-external"></a></p>
 </div>
 <div class="body">
 <h3 class="no-anchor listing-title">
-<a href="./posts/brice-williams-season-comparison/index.html" class="no-external">Brice Williams’ Historic Season</a>
+<a href="./posts/brice-williams-season-comparison/index.html" class="no-external">Just how good was Brice Williams’ 2024-25 campaign?</a>
 </h3>
 <div class="listing-subtitle">
 <a href="./posts/brice-williams-season-comparison/index.html" class="no-external"></a>
@@ -223,8 +223,8 @@ basketball
 <div class="listing-category" onclick="window.quartoListingCategory('bmVicmFza2E='); return false;">
 nebraska
 </div>
-<div class="listing-category" onclick="window.quartoListingCategory('YnJpY2V3aWxsaWFtcw=='); return false;">
-bricewilliams
+<div class="listing-category" onclick="window.quartoListingCategory('YnJpY2UlMjB3aWxsaWFtcw=='); return false;">
+brice williams
 </div>
 </div>
 <div class="listing-description">
@@ -234,7 +234,7 @@ bricewilliams
 <div class="metadata">
 <a href="./posts/brice-williams-season-comparison/index.html" class="no-external">
 <div class="listing-date">
-Apr 3, 2025
+Apr 14, 2025
 </div>
 <div class="listing-author">
 Cole Eastwood
