--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ window.Quarto = {
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="bmNhYSUyQ2Jhc2tldGJhbGwlMkNuZWJyYXNrYSUyQ2JyaWNlJTIwd2lsbGlhbXM=" data-listing-date-sort="1744606800000" data-listing-file-modified-sort="1744326792757" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="3" data-listing-word-count-sort="597">
+<div class="quarto-post image-right" data-index="0" data-categories="bmNhYSUyQ2Jhc2tldGJhbGwlMkNuZWJyYXNrYSUyQ2JyaWNlJTIwd2lsbGlhbXM=" data-listing-date-sort="1744606800000" data-listing-file-modified-sort="1744679396872" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="8" data-listing-word-count-sort="1580">
 <div class="thumbnail">
 <p><a href="./posts/brice-williams-season-comparison/index.html" class="no-external"></a></p><a href="./posts/brice-williams-season-comparison/index.html" class="no-external">
 <p><img loading="lazy" src="./posts/brice-williams-season-comparison/BricePicture.jpg" class="thumbnail-image"></p>
@@ -208,7 +208,7 @@ window.Quarto = {
 </div>
 <div class="body">
 <h3 class="no-anchor listing-title">
-<a href="./posts/brice-williams-season-comparison/index.html" class="no-external">Just how good was Brice Williams’ 2024-25 campaign?</a>
+<a href="./posts/brice-williams-season-comparison/index.html" class="no-external">Just how good was Brice Williams’ 2024-25 season?</a>
 </h3>
 <div class="listing-subtitle">
 <a href="./posts/brice-williams-season-comparison/index.html" class="no-external"></a>
@@ -228,7 +228,7 @@ brice williams
 </div>
 </div>
 <div class="listing-description">
-<a href="./posts/brice-williams-season-comparison/index.html" class="no-external">Despite coming up short of a second consecutive NCAA Tournament bid, Nebraska’s Brice Williams was absolutely phenomenal for the Cornhuskers, leading them to claim the…</a>
+<a href="./posts/brice-williams-season-comparison/index.html" class="no-external">Despite coming up short of a second consecutive NCAA Tournament bid, Nebraska’s Brice Williams was phenomenal for the Cornhuskers, leading them to claim the inaugural…</a>
 </div>
 </div>
 <div class="metadata">
